@@ -1,0 +1,2 @@
+<!-- Output for Theme Debug Markup test -->
+Node Content Dummy
